# insanely-fast-whisper-api

./: Dockerfile  LICENSE  README.md  fly-docker-image.toml  fly.toml  pyproject.toml  requirements.txt
app/: app.py  diarization_pipeline.py
